# C-CPP-Programming-and-Algorithms

./: README.md
01-c_programming_project/: README.cd
01-c_programming_project/RF_cascade_analysis_tool/: .gitignore  Makefile  README.cd  main.c  rf_cascade.c  rf_cascade.h  test_rf_cascade.c
01-c_programming_project/embedded_PID_controller_with_anti-windup/: Makefile  README.cd  pid.c  pid.h  test_pid.c
01-c_programming_project/embedded_cooperative_task_scheduler/: .gitignore  Makefile  README.cd  scheduler.c  scheduler.h  test_sched  test_scheduler.c
01-c_programming_project/embedded_key-value_store_with_wear_eveling_and_ower-fail_safety/: .gitignore  Makefile  README.cd  flash_sim.c  flash_sim.h  kv_store.c  kv_store.h  test_kv.c
01-c_programming_project/embedded_packet_protocol/: Makefile  README.cd  packet_protocol.c  packet_protocol.h  test_packet.c
01-c_programming_project/fixed_point_dsp_toolkit/: .gitignore  Makefile  README.cd  dsp_filters.c  dsp_filters.h  main.c  q15.h  ring_buffer.c  ring_buffer.h  test_dsp_filters.c  (+2 more)
02-cpp_programming_project/: Guessing_game.cpp  README.cd  Validator for the standard Finnish passenger-car registration plate format.cpp  generating_random_numberscpp.cpp
02-cpp_programming_project/IQ_imbalance_estimation_and_compensation/: .gitignore  CMakeLists.txt  README.cd  iq_imbalance.cpp  iq_imbalance.h  main.cpp  test_iq_imbalance.cpp
02-cpp_programming_project/monte_carlo_lottery_analysis/: CMakeLists.txt  README.cd  gitignore  lottery.cpp  lottery.h
03-monte_carlo_lottery_analysis/: main.cpp  test_lottery.cpp
(+7 files in other folders)
